--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
                 const tr = document.createElement('tr');
                 const isMvp = summary.mvp && summary.mvp.ID === f.ID;
                 tr.className = `hover:bg-gray-800/40 ${isMvp ? 'bg-green-600/10 border border-green-500/40' : ''}`;
+                tr.style.cursor = 'pointer';
                 const record = `${safeNum(f?.Wins)}-${safeNum(f?.Losses)}-${safeNum(f?.Draws)}`;
                 tr.innerHTML = `
                     <td class="px-3 py-2">${f?.Name || `#${f?.ID}`} ${isMvp ? '<span class="ml-2 text-xs font-bold uppercase text-green-300">captain</span>' : ''}</td>
@@ -364,6 +365,11 @@
                     <td class="px-3 py-2 text-gray-200">${safeNum(f?.Endurance)}</td>
                     <td class="px-3 py-2 text-gray-200">${safeNum(f?.Technique)}</td>
                 `;
+                tr.addEventListener('click', () => {
+                    if (f?.ID) {
+                        window.open(`https://spoodblort.com/fighter/${encodeURIComponent(f.ID)}`, '_blank', 'noopener');
+                    }
+                });
                 tbody.appendChild(tr);
             });
 
